@@ -2,7 +2,9 @@ Changes in version 2.5-0
 
   o Added Predictor Effect Plots and Response Transformation dialogs to Models menu.
   
-  o New Statistics > Transformations menu with Transform Variables Toward Normality dialog.
+  o New Transform Variables Toward Normality dialog in Statistics > Summaries menu.
+  
+  o New Symmetry Boxplot dialog in Graphs menu.
   
   o QQ plots may be drawn by groups.
   
